# HuggingFace_agent_course

./: .gitignore  README.md
huggingface-agent-course/: .gitignore  .ruff.toml  README.md  mypy.ini  pyproject.toml  requirements.txt
huggingface-agent-course/estuaire/: data.py  infer_model.py  model.py
huggingface-agent-course/estuaire/ollama_agent/: main.py
huggingface-agent-course/src/agent/: main.py  smolagenthf.ipynb
huggingface-agent-course/tests/: __init__.py
