[tool.poetry]
name = "huggingface-agent-course"
version = "0.1.0"
description = "A course project for building a Hugging Face agent."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.0.0"
torch = "^1.9.0"
flask = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
ruff = "^0.0.0"  # Replace with the latest version
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"